[package]
name = "api-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.6", features=[ "migrations", "sqlite" ] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.6", features=[ "migrations", "sqlite" ] }
env_logger = "0.9.0"
serde = "1.0.157"
actix-web = "4"